Refine agent code.
Signed-off-by: sw_3d_004 <xingguangddchou@163.com>

--- a/EvoBasic/EvoBasic.vcxproj
+++ b/EvoBasic/EvoBasic.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Agent.cpp" />
     <ClCompile Include="EvoBasic.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Agent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
