--- a/EvoBasic/EvoBasic.vcxproj.filters
+++ b/EvoBasic/EvoBasic.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="EvoBasic.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Agent.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Agent.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
