Add enviroment class, find a bug.
Signed-off-by: sw_3d_004 <xingguangddchou@163.com>

--- a/EvoBasic/EvoBasic.vcxproj.filters
+++ b/EvoBasic/EvoBasic.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Agent.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Environment.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
