Add some code in EvoGraphics.
Signed-off-by: sw_3d_004 <xingguangddchou@163.com>

--- a/EvoGraphics/EvoGraphics.vcxproj
+++ b/EvoGraphics/EvoGraphics.vcxproj
@@ -20,6 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Draw.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Manager.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Manager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
