--- a/EvoGraphics/EvoGraphics.vcxproj.filters
+++ b/EvoGraphics/EvoGraphics.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="Draw.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Manager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Manager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
