Add meta class.
Signed-off-by: sw_3d_004 <xingguangddchou@163.com>

--- a/EvoGraphics/EvoGraphics.vcxproj
+++ b/EvoGraphics/EvoGraphics.vcxproj
@@ -22,9 +22,11 @@
     <ClCompile Include="Draw.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
+    <ClCompile Include="Meta.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Manager.h" />
+    <ClInclude Include="Meta.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
