--- a/EvoGraphics/EvoGraphics.vcxproj.filters
+++ b/EvoGraphics/EvoGraphics.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="Manager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Meta.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Manager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Meta.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
