--- a/MeshWorld/MeshWorld/MeshWorld.vcxproj.filters
+++ b/MeshWorld/MeshWorld/MeshWorld.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\MwCompiler.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="d3dx12.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MwCompiler.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
